added place holders for icons

--- a/index.html
+++ b/index.html
@@ -15,12 +15,21 @@
       <p>resume</p>
     </div>
     <div id="center-container">
-      <p id="about">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores quo aspernatur, qui, nostrum dolore excepturi
-        eaque odit molestias atque totam vitae delectus accusamus, eos quaerat.
-      </p>
+      <div id="about-container">
+        <p id="about">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores quo aspernatur, qui, nostrum dolore excepturi
+          eaque odit molestias atque totam vitae delectus accusamus, eos quaerat.
+        </p>
+        <div id="icon-container">
+          <div class="icon"></div>
+          <div class="icon"></div>
+          <div class="icon"></div>
+          <div class="icon"></div>
+        </div>
+      </div>
       <div id="image-container">
-        <img src="#" alt="image" />
+        <!-- <img src="#" alt="image" /> -->
+        <div class="circle"></div>
       </div>
       <div id="user-info">
         <h1>username</h1>
