adjusted name and image placeholder styling in navbar to flex

--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
   </head>
   <body>
     <div id="nav-container">
-      <div id="small-image-and-name">
-        <img src="#" alt="image" id="small-image" />
-        <h1>name</h1>
+      <div id="small-image-and-name-container">
+        <img src="#" alt="" id="small-image" />
+        <div class="name-role">
+          <h1>name</h1>
+          <h3>role/position</h3>
+        </div>
       </div>
       <p>resume</p>
     </div>
