created boilerplate for about/resume page

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <h3>role/position</h3>
         </div>
       </div>
-      <p>resume</p>
+      <a href="/about.html">resume</a>
     </div>
     <div id="center-container">
       <div id="about-container">
