--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <header class="nav-container">
-      <div>Lucid Studio</div>
+      <div class="nav-item">Lucid Studio</div>
       <ul class="nav-links">
         <li class="nav-item">about</li>
         <li class="nav-item">work</li>
@@ -28,42 +28,143 @@
     </div>
 
     <div class="about-container">
-      <div class="about-text-container">
-        <div class="title">about</div>
-        <p class="about-text">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, nostrum vitae sunt eum qui dolor?
-          Praesentium dolorem consequuntur ipsum veniam aspernatur ut non cupiditate architecto.
-        </p>
+      <div class="title-container">
+        <div class="title">our services</div>
       </div>
-      <div class="about-text-container">
-        <p class="about-text">
-          <div class="title">≎</div>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid a fuga libero possimus expedita praesentium
-          tenetur ipsa reprehenderit eius? Adipisci, nisi sed inventore perferendis veniam odit explicabo voluptatum
-          cupiditate animi repellat numquam? Provident, velit. Voluptas perferendis saepe sunt amet libero natus tempore
-          ducimus magnam cumque, enim deleniti culpa voluptatibus quas!
-        </p>
-      </div>
-      <div class="about-text-container">
-        <p class="about-text">
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid a fuga libero possimus expedita praesentium
-          tenetur ipsa reprehenderit eius? Adipisci, nisi sed inventore perferendis veniam odit explicabo voluptatum
-          cupiditate animi repellat numquam? Provident, velit. Voluptas perferendis saepe sunt amet libero natus tempore
-          ducimus magnam cumque, enim deleniti culpa voluptatibus quas!
-        </p>
-      </div>
-      <div class="about-text-container">
-        <p class="about-text">
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid a fuga libero possimus expedita praesentium
-          tenetur ipsa reprehenderit eius? Adipisci, nisi sed inventore perferendis veniam odit explicabo voluptatum
-          cupiditate animi repellat numquam? Provident, velit. Voluptas perferendis saepe sunt amet libero natus tempore
-          ducimus magnam cumque, enim deleniti culpa voluptatibus quas!
-        </p>
+
+      <div class="about-grid">
+        <div class="about-text-container">
+          <div class="about-title">Web design & development</div>
+          <p class="about-text">
+            Our team of expert designers and developers creates bespoke websites tailored to your brand's unique
+            identity and goals. From concept to launch, we handle every aspect of the development process to ensure a
+            seamless online presence.
+          </p>
+        </div>
+        <div class="about-text-container">
+          <div class="about-title">Responsive Design</div>
+          <p class="about-text">
+            In today's mobile-first world, having a responsive website is crucial. We optimize your site to adapt
+            seamlessly to any screen size, ensuring a consistent and user-friendly experience across all devices.
+          </p>
+        </div>
+        <div class="about-text-container">
+          <div class="about-title">UI/UX Design</div>
+          <p class="about-text">
+            User experience is paramount in the digital realm. Our UI/UX designers create intuitive interfaces that
+            guide users through your site effortlessly, maximizing engagement and conversions.
+          </p>
+        </div>
+        <div class="about-text-container">
+          <div class="about-title">SEO & Digital Marketing</div>
+          <p class="about-text">
+            A beautiful website is only effective if it's visible to your target audience. Our SEO and digital marketing
+            experts employ proven strategies to boost your online visibility and drive qualified traffic to your site.
+          </p>
+        </div>
+        <div class="about-text-container">
+          <div class="about-title">Maintenance & Support</div>
+          <p class="about-text">
+            Your journey with us doesn't end at launch. We provide ongoing maintenance and support to keep your website
+            running smoothly and up-to-date with the latest trends and technologies.
+          </p>
+        </div>
+        <div class="about-text-container">
+          <div class="about-title">E-commerce Solutions</div>
+          <p class="about-text">
+            Ready to take your business online? We specialize in building robust e-commerce platforms that drive sales
+            and enhance customer engagement. From inventory management to payment integration, we've got you covered.
+          </p>
+        </div>
       </div>
     </div>
 
-    <div>
-      <div>⇎</div>
+    <div class="work-container">
+      <div class="work-left-section-container">
+        <div class="title">our work</div>
+        <p class="about-text">
+          We take pride in crafting unique digital experiences that help our clients stand out. From sleek and
+          responsive websites to robust e-commerce platforms and innovative mobile apps, our portfolio showcases a range
+          of projects tailored to diverse industries. Each project is a testament to our commitment to creativity,
+          functionality, and user experience. Explore our previous work to see how we’ve helped businesses like yours
+          achieve their goals with cutting-edge design and development.
+        </p>
+      </div>
+      <div class="work-right-section-container">
+        <div class="grid-item">1</div>
+        <div class="grid-item">2</div>
+        <div class="grid-item">3</div>
+        <div class="grid-item">4</div>
+        <div class="grid-item">5</div>
+        <div class="grid-item">6</div>
+      </div>
+    </div>
+
+    <div class="footer-container">
+      <div class="footer-title-container">
+        <div class="title">Let's Connect ✌</div>
+      </div>
+      <div class="footer-text-container">
+        <p class="about-text footer-text">
+          Ready to elevate your online presence? Get in touch with us today to discuss your project and take the first
+          step towards digital success. Whether you have a specific vision in mind or need guidance in shaping your
+          online strategy, our team is here to help. Schedule a 30 min call with us below, and let's bring your digital
+          dreams to life together.
+        </p>
+        <!-- Cal inline embed code begins -->
+        <div style="width: 100%; height: 100%; overflow: scroll" id="my-cal-inline" class="cal"></div>
+      </div>
+      <div class="footer-title">Lucid Studio</div>
+
+      <script type="text/javascript">
+        (function (C, A, L) {
+          let p = function (a, ar) {
+            a.q.push(ar);
+          };
+          let d = C.document;
+          C.Cal =
+            C.Cal ||
+            function () {
+              let cal = C.Cal;
+              let ar = arguments;
+              if (!cal.loaded) {
+                cal.ns = {};
+                cal.q = cal.q || [];
+                d.head.appendChild(d.createElement('script')).src = A;
+                cal.loaded = true;
+              }
+              if (ar[0] === L) {
+                const api = function () {
+                  p(api, arguments);
+                };
+                const namespace = ar[1];
+                api.q = api.q || [];
+                if (typeof namespace === 'string') {
+                  cal.ns[namespace] = cal.ns[namespace] || api;
+                  p(cal.ns[namespace], ar);
+                  p(cal, ['initNamespace', namespace]);
+                } else p(cal, ar);
+                return;
+              }
+              p(cal, ar);
+            };
+        })(window, 'https://cal.vincentpalomo.dev/embed/embed.js', 'init');
+        Cal('init', '30min', { origin: 'https://cal.vincentpalomo.dev' });
+
+        Cal.ns['30min']('inline', {
+          elementOrSelector: '#my-cal-inline',
+          config: { layout: 'month_view', theme: 'light' },
+          calLink: 'vincentpalomo/30min',
+        });
+
+        Cal.ns['30min']('ui', {
+          theme: 'light',
+          styles: { branding: { brandColor: '#f3f3f3' } },
+          hideEventTypeDetails: false,
+          layout: 'month_view',
+        });
+      </script>
+      <!-- Cal inline embed code ends -->
     </div>
     <canvas id="shader-canvas"></canvas>
     <script src="shader.js" defer></script>
