Remove project files and clean up repository

--- a/old/images/index.html
+++ b/old/images/index.html
@@ -80,23 +80,25 @@
     </div>
 
     <div class="work-container">
-      <div class="work-left-section-container">
-        <div class="title">our work</div>
-        <p class="about-text">
-          We take pride in crafting unique digital experiences that help our clients stand out. From sleek and
-          responsive websites to robust e-commerce platforms and innovative mobile apps, our portfolio showcases a range
-          of projects tailored to diverse industries. Each project is a testament to our commitment to creativity,
-          functionality, and user experience. Explore our previous work to see how we’ve helped businesses like yours
-          achieve their goals with cutting-edge design and development.
-        </p>
-      </div>
-      <div class="work-right-section-container">
-        <div class="grid-item">1</div>
-        <div class="grid-item">2</div>
-        <div class="grid-item">3</div>
-        <div class="grid-item">4</div>
-        <div class="grid-item">5</div>
-        <div class="grid-item">6</div>
+      <div class="work-content-container">
+        <div class="work-left-section-container">
+          <div class="title">our work</div>
+          <p class="about-text">
+            We take pride in crafting unique digital experiences that help our clients stand out. From sleek and
+            responsive websites to robust e-commerce platforms and innovative mobile apps, our portfolio showcases a
+            range of projects tailored to diverse industries. Each project is a testament to our commitment to
+            creativity, functionality, and user experience. Explore our previous work to see how we’ve helped businesses
+            like yours achieve their goals with cutting-edge design and development.
+          </p>
+        </div>
+        <div class="work-right-section-container">
+          <div class="grid-item">1</div>
+          <div class="grid-item">2</div>
+          <div class="grid-item">3</div>
+          <div class="grid-item">4</div>
+          <div class="grid-item">5</div>
+          <div class="grid-item">6</div>
+        </div>
       </div>
     </div>
 
@@ -114,7 +116,7 @@
         <!-- Cal inline embed code begins -->
         <div style="width: 100%; height: 100%; overflow: scroll" id="my-cal-inline" class="cal"></div>
       </div>
-      <div class="footer-title">Lucid Studio</div>
+      <!-- <div class="footer-title">Lucid Studio</div> -->
 
       <script type="text/javascript">
         (function (C, A, L) {
